# testes

devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/pkgconfig/: tutorial.pc
devel/lib/tutorial/: listener  talker
devel/share/tutorial/cmake/: tutorialConfig.cmake
src/tutorial/: CMakeLists.txt  package.xml
src/tutorial/src/: listener.cpp~  talker.cpp~
